--- a/data/tyres.ini
+++ b/data/tyres.ini
@@ -109,36 +109,49 @@ RADIUS_ANGULAR_K=0.01   ; Radius grows of MILLIMITERS!! Formula -> RADIUS_ANGULA
 BRAKE_DX_MOD=0.05
 
 [THERMAL_FRONT]
-SURFACE_TRANSFER=0.0150			;How fast external sources heat the tyre tread touching the asphalt: Values 0-1
+;SURFACE_TRANSFER=0.0150			;How fast external sources heat the tyre tread touching the asphalt: Values 0-1
+SURFACE_TRANSFER=0.015			;How fast external sources heat the tyre tread touching the asphalt: Values 0-1
 PATCH_TRANSFER=0.00027						;How fast heat transfers from one tyre location to the other: Values 0-1
-CORE_TRANSFER=0.00014					;How fast heat transfers from tyre to inner air
+;CORE_TRANSFER=0.00014					;How fast heat transfers from tyre to inner air
+CORE_TRANSFER=0.00025					;How fast heat transfers from tyre to inner air
 INTERNAL_CORE_TRANSFER=0.0038
-FRICTION_K=0.07719							;Quantity of slip becoming heat
-;FRICTION_K=0.30
-ROLLING_K=0.22						;rolling resistance heat
+;FRICTION_K=0.07719							;Quantity of slip becoming heat
+FRICTION_K=0.11							;Quantity of slip becoming heat
+;ROLLING_K=0.22						;rolling resistance heat
+;ROLLING_K=0.15						;rolling resistance heat     50c core
+;ROLLING_K=0.10						;rolling resistance heat     43c core
+;ROLLING_K=0.05						;rolling resistance heat     41c core
+ROLLING_K=0.04						;rolling resistance heat     ??c core
 PERFORMANCE_CURVE=tcurve_semis.lut				;File to use for temperature/grip relation
 GRAIN_GAMMA=1 				; Gamma for the curve grain vs slip. higher number makes grain more influenced by slip
 GRAIN_GAIN=0.4				; Gain for graining. How much gain raises with slip and temperature difference- 100 value = slipangle*(1+grain%)
 BLISTER_GAMMA=1			; Gamma for the curve blistering vs slip. higher number makes blistering more influenced by slip
 BLISTER_GAIN=0.4			; Gain for blistering. How much blistering raises with slip and temperature difference. think blistering more as heat cycles. 100 value = 20% less grip
-COOL_FACTOR=1.88
-;COOL_FACTOR=1.00
-SURFACE_ROLLING_K=1.25049
+;COOL_FACTOR=1.88
+COOL_FACTOR=2.5
+;SURFACE_ROLLING_K=1.25049
+SURFACE_ROLLING_K=0.01
 
 [THERMAL_REAR]
-SURFACE_TRANSFER=0.0150			;How fast external sources heat the tyre tread touching the asphalt: Values 0-1
+;SURFACE_TRANSFER=0.0150			;How fast external sources heat the tyre tread touching the asphalt: Values 0-1
+SURFACE_TRANSFER=0.015			;How fast external sources heat the tyre tread touching the asphalt: Values 0-1
 PATCH_TRANSFER=0.00027						;How fast heat transfers from one tyre location to the other: Values 0-1
-CORE_TRANSFER=0.00014					;How fast heat transfers from tyre to inner air
+;CORE_TRANSFER=0.00014					;How fast heat transfers from tyre to inner air
+CORE_TRANSFER=0.00025					;How fast heat transfers from tyre to inner air
 INTERNAL_CORE_TRANSFER=0.0038
-FRICTION_K=0.07719							;Quantity of slip becoming heat
-;FRICTION_K=0.30
-ROLLING_K=0.22						;rolling resistance heat
+;FRICTION_K=0.07719							;Quantity of slip becoming heat
+FRICTION_K=0.11							;Quantity of slip becoming heat
+;ROLLING_K=0.22						;rolling resistance heat
+;ROLLING_K=0.15						;rolling resistance heat     50c core
+;ROLLING_K=0.10						;rolling resistance heat     43c core
+;ROLLING_K=0.05						;rolling resistance heat     41c core
+ROLLING_K=0.04						;rolling resistance heat     ??c core
 PERFORMANCE_CURVE=tcurve_semis.lut				;File to use for temperature/grip relation
 GRAIN_GAMMA=1 				; Gamma for the curve grain vs slip. higher number makes grain more influenced by slip
 GRAIN_GAIN=0.4				; Gain for graining. How much gain raises with slip and temperature difference- 100 value = slipangle*(1+grain%)
 BLISTER_GAMMA=1			; Gamma for the curve blistering vs slip. higher number makes blistering more influenced by slip
 BLISTER_GAIN=0.4			; Gain for blistering. How much blistering raises with slip and temperature difference. think blistering more as heat cycles. 100 value = 20% less grip
-COOL_FACTOR=1.88
-;COOL_FACTOR=1.00
-SURFACE_ROLLING_K=1.25049
-
+;COOL_FACTOR=1.88
+COOL_FACTOR=2.5
+;SURFACE_ROLLING_K=1.25049
+SURFACE_ROLLING_K=0.01
