--- a/ks_toyota_gt86_SSC/data/proview_nodes.ini
+++ b/ks_toyota_gt86_SSC/data/proview_nodes.ini
@@ -3,9 +3,27 @@ CENTRAL_light=0
 FLYCAM_L_4=0
 SUSP_RR=0
 ____BCaliper_RR=0
+________BCaliper_RR_SUB1=0
+________BCaliper_RR_SUB0=0
 SUSP_RF=0
 ____GEO_susp1=0
+________GEO_susp1_SUB0=0
+________GEO_susp1_SUB1=0
 GEO_chassis=0
+____GEO_chassis_SUB9=0
+____GEO_chassis_SUB12=0
+____GEO_chassis_SUB2=0
+____GEO_chassis_SUB13=0
+____GEO_chassis_SUB0=0
+____GEO_chassis_SUB3=0
+____GEO_chassis_SUB6=0
+____GEO_chassis_SUB7=0
+____GEO_chassis_SUB8=0
+____GEO_chassis_SUB1=0
+____GEO_chassis_SUB5=0
+____GEO_chassis_SUB4=0
+____GEO_chassis_SUB10=0
+____GEO_chassis_SUB11=0
 ____Plate_LODA1=0
 DAMAGE_GLASS_REAR_1=0
 ____damage_glass_rear_ObjOff=0
@@ -15,20 +33,32 @@ FLYCAM_L_3=0
 FLYCAM_R_5=0
 SUSP_LR=0
 ____BCaliper_LR_ObjOff=0
+________BCaliper_LR_ObjOff_SUB1=0
+________BCaliper_LR_ObjOff_SUB0=0
 RearLight_1=0
 FLYCAM_R_3=0
 WHEEL_RF=0
 ____RIM_RF=0
 ________Rims_LR_ObjOff2=0
+____________Rims_LR_ObjOff2_SUB1=0
+____________Rims_LR_ObjOff2_SUB0=0
 ____RIM_BLUR_RF=0
 ________Rims_Blur_RF_ObjOff=0
+____________Rims_Blur_RF_ObjOff_SUB1=0
+____________Rims_Blur_RF_ObjOff_SUB0=0
+____________Rims_Blur_RF_ObjOff_SUB2=0
 ____Tyre_RF_ObjOff2=0
 FLYCAM_R_2=0
 WHEEL_RR=0
 ____RIM_RR=0
 ________Rims_LR_ObjOff4=0
+____________Rims_LR_ObjOff4_SUB1=0
+____________Rims_LR_ObjOff4_SUB0=0
 ____RIM_BLUR_RR=0
 ________Rims_Blur_RF_ObjOff2=0
+____________Rims_Blur_RF_ObjOff2_SUB1=0
+____________Rims_Blur_RF_ObjOff2_SUB0=0
+____________Rims_Blur_RF_ObjOff2_SUB2=0
 ____Tyre_RF_ObjOff3=0
 wiper_1=0
 ____Wiperstand_R=0
@@ -36,11 +66,23 @@ ____wiper_4=0
 ________Wiperbrush_L=0
 REAR_BUMPER=0
 ____Bumper_Rear_ObjOff=0
+________Bumper_Rear_ObjOff_SUB0=0
+________Bumper_Rear_ObjOff_SUB1=0
+________Bumper_Rear_ObjOff_SUB2=0
 FRONT_BUMPER=0
 ____Frontlights_1=0
+________Frontlights_1_SUB1=0
+________Frontlights_1_SUB0=0
 ____GEO_Extra_light_FRONT=0
 ____GEO_light_EXTRA_GLASS=0
 ____GEO_FrontBumper=0
+________GEO_FrontBumper_SUB0=0
+________GEO_FrontBumper_SUB1=0
+________GEO_FrontBumper_SUB4=0
+________GEO_FrontBumper_SUB6=0
+________GEO_FrontBumper_SUB2=0
+________GEO_FrontBumper_SUB3=0
+________GEO_FrontBumper_SUB5=0
 DISC_RR=0
 ____BDisk_RR_ObjOff=0
 FrontLight_0=0
@@ -49,17 +91,27 @@ ____RearLight_0=0
 WHEEL_LF=0
 ____RIM_LF=0
 ________Rims_LR_ObjOff3=0
+____________Rims_LR_ObjOff3_SUB1=0
+____________Rims_LR_ObjOff3_SUB0=0
 ____RIM_BLUR_LF=0
 ________Rims_Blur_RF_ObjOff1=0
+____________Rims_Blur_RF_ObjOff1_SUB1=0
+____________Rims_Blur_RF_ObjOff1_SUB0=0
+____________Rims_Blur_RF_ObjOff1_SUB2=0
 ____Tyre_RF_ObjOff1=0
 DAMAGE_GLASS_CENTER_1=0
 ____damage_glass_center1_ObjOff=0
 FLYCAM_L_1=0
 MOTORHOOD=0
 ____Hood_ObjOff=0
+________Hood_ObjOff_SUB0=0
+________Hood_ObjOff_SUB1=0
 FLYCAM_R_0=0
 COCKPIT_HR=0
 ____CINTURE_ON=0
+________CINTURE_ON_SUB2=0
+________CINTURE_ON_SUB1=0
+________CINTURE_ON_SUB0=0
 ____ARROW_OIL=0
 ________ARROW_OIL_ObjOff=0
 ____ARROW_FUEL=0
@@ -70,12 +122,39 @@ ____ARROW_SPEED=0
 ________ARROW_SPEED_ObjOff=0
 ____STEER_HR=0
 ________Steering_Wheel_ObjOff=0
+____________Steering_Wheel_ObjOff_SUB0=0
+____________Steering_Wheel_ObjOff_SUB3=0
+____________Steering_Wheel_ObjOff_SUB6=0
+____________Steering_Wheel_ObjOff_SUB5=0
+____________Steering_Wheel_ObjOff_SUB1=0
+____________Steering_Wheel_ObjOff_SUB2=0
+____________Steering_Wheel_ObjOff_SUB4=0
 ____DOOR_R_1=0
 ________Int_Window_R_ObjOff=0
 ________Int_Door_R=0
+____________Int_Door_R_SUB9=0
+____________Int_Door_R_SUB1=0
+____________Int_Door_R_SUB6=0
+____________Int_Door_R_SUB3=0
+____________Int_Door_R_SUB0=0
+____________Int_Door_R_SUB2=0
+____________Int_Door_R_SUB4=0
+____________Int_Door_R_SUB5=0
+____________Int_Door_R_SUB7=0
+____________Int_Door_R_SUB8=0
 ____DOOR_L_1=0
 ________Int_Window_L_ObjOff=0
 ________Int_Door_L=0
+____________Int_Door_L_SUB1=0
+____________Int_Door_L_SUB5=0
+____________Int_Door_L_SUB6=0
+____________Int_Door_L_SUB2=0
+____________Int_Door_L_SUB0=0
+____________Int_Door_L_SUB4=0
+____________Int_Door_L_SUB8=0
+____________Int_Door_L_SUB3=0
+____________Int_Door_L_SUB9=0
+____________Int_Door_L_SUB7=0
 ____INT_display_A=0
 ____INT_display_B=0
 ____Int_Windows_ObjOff=0
@@ -88,11 +167,44 @@ ________polymsh_extracted1=0
 ____Extra_door2=0
 ________polymsh_detached1=0
 ____GEAR_SHIIFT_SKINNED=0
+____GEO_Cockpit_HR=0
+________GEO_Cockpit_HR_SUB7=0
+________GEO_Cockpit_HR_SUB8=0
+________GEO_Cockpit_HR_SUB24=0
+________GEO_Cockpit_HR_SUB15=0
+________GEO_Cockpit_HR_SUB20=0
+________GEO_Cockpit_HR_SUB6=0
+________GEO_Cockpit_HR_SUB13=0
+________GEO_Cockpit_HR_SUB11=0
+________GEO_Cockpit_HR_SUB12=0
+________GEO_Cockpit_HR_SUB17=0
+________GEO_Cockpit_HR_SUB3=0
+________GEO_Cockpit_HR_SUB21=0
+________GEO_Cockpit_HR_SUB9=0
+________GEO_Cockpit_HR_SUB19=0
+________GEO_Cockpit_HR_SUB2=0
+________GEO_Cockpit_HR_SUB0=0
+________GEO_Cockpit_HR_SUB25=0
+________GEO_Cockpit_HR_SUB23=0
+________GEO_Cockpit_HR_SUB16=0
+________GEO_Cockpit_HR_SUB1=0
+________GEO_Cockpit_HR_SUB14=0
+________GEO_Cockpit_HR_SUB18=0
+________GEO_Cockpit_HR_SUB22=0
+________GEO_Cockpit_HR_SUB10=0
+________GEO_Cockpit_HR_SUB4=0
+________GEO_Cockpit_HR_SUB5=0
+____LED_RPM=0
 ____SHIFT_1=0
 ________SHIFT_2=0
 ____________polymsh1=0
-____GEO_Cockpit_HR=0
-____LED_RPM=0
+________________polymsh1_SUB1=0
+________________polymsh1_SUB0=0
+________________polymsh1_SUB3=0
+________________polymsh1_SUB2=0
+____________SHIFT_2_end=0
+GEAR_SHIIFT_SKINNED_SUB0=0
+GEAR_SHIIFT_SKINNED_SUB1=0
 wiper_2=0
 ____wiper_3=0
 ________Wiperbrush_R=0
@@ -110,16 +222,23 @@ DAMAGE_GLASS_LEFT_1=0
 ____damage_glass_left_ObjOff=0
 SUSP_LF=0
 ____GEO_susp2=0
+________GEO_susp2_SUB1=0
+________GEO_susp2_SUB0=0
 DAMAGE_GLASS_CENTER_2=0
 ____damage_glass_center2_ObjOff=0
 DISC_LR=0
 ____BDisk_LR_ObjOff=0
 CINTURE_OFF=0
+____CINTURE_OFF_SUB2=0
+____CINTURE_OFF_SUB1=0
+____CINTURE_OFF_SUB0=0
 GEO_Extra_glass=0
 COCKPIT_LR=0
 ____STEER_LR=0
 ________GGEO_Steer_LR=0
 ____GEO_int_LR=0
+________GEO_int_LR_SUB1=0
+________GEO_int_LR_SUB0=0
 Int_Window_Black_ObjOff=0
 FLYCAM_L_2=0
 DISC_LF=0
@@ -128,14 +247,26 @@ FLYCAM_R_1=0
 WHEEL_LR=0
 ____RIM_BLUR_LR=0
 ________Rims_Blur_RF_ObjOff3=0
+____________Rims_Blur_RF_ObjOff3_SUB1=0
+____________Rims_Blur_RF_ObjOff3_SUB0=0
+____________Rims_Blur_RF_ObjOff3_SUB2=0
 ____RIM_LR=0
 ________Rims_LR_ObjOff5=0
+____________Rims_LR_ObjOff5_SUB1=0
+____________Rims_LR_ObjOff5_SUB0=0
 ____Tyre_RF_ObjOff4=0
 DOOR_L=0
 ____Door_L_ObjOff=0
+________Door_L_ObjOff_SUB1=0
+________Door_L_ObjOff_SUB0=0
+________Door_L_ObjOff_SUB2=0
+________Door_L_ObjOff_SUB3=0
 ____Window_L_ObjOff=0
 DOOR_R=0
 ____Window_R=0
 ________Window_R_ObjOff=0
 ____Door_R1=0
 ________Door_R_ObjOff=0
+____________Door_R_ObjOff_SUB1=0
+____________Door_R_ObjOff_SUB0=0
+____________Door_R_ObjOff_SUB2=0
