--- a/ks_toyota_gt86_SSC/data/suspensions.ini
+++ b/ks_toyota_gt86_SSC/data/suspensions.ini
@@ -9,10 +9,18 @@ CG_LOCATION=0.575						; Front Weight distribution in percentance
 ; https://eibach.com/us/c-240-product-releases-2013-scion-fr-s-and-subaru-brz-anti-roll-kit.html
 ;FRONT=24700	; stock						; Front antiroll bar stifness. in Nm
 ; FRONT=88000       ; Eibach soft
-FRONT=103000        ; Eibach hard
+;FRONT=103000        ; Eibach hard
 ;REAR=19800	    ; stock							; Rear antiroll bar stifness. in Nm
 ;REAR=45000      ; Eibach soft
-REAR=60000      ; Eibach hard
+;REAR=40000      ; Eibach hard
+
+; New sway bar calculation - I think the stock front sway bar stiffness is wrong in game
+FRONT=86000 ; Eibach hard - Stock * 3.48 - 86 N/mm 
+;Front=66000 ; Eibach soft - Stock * 2.67 - 66 N/mm
+
+REAR=50000 ; Eibach hard - Stock * 2.53 -   50 N/mm
+;REAR=38000 ; Eibach soft - Stock * 1.92 - 38 N/mm
+
 
 [FRONT]
 TYPE=STRUT
