--- a/ks_toyota_gt86_SSC/data/tyres.ini
+++ b/ks_toyota_gt86_SSC/data/tyres.ini
@@ -34,9 +34,9 @@ CAMBER_GAIN=0.136					; Camber gain value as slipangle multiplayer. default 1
 DCAMBER_0=1.2
 DCAMBER_1=-13						; D dependency on camber. D=D*(1.0 - (camberRAD*DCAMBER_0 + camberRAD^2 * DCAMBER_1)) , camberRAD=absolute value of camber in radians
 ;FRICTION_LIMIT_ANGLE=7.99							; Slip angle peak. 	
-FRICTION_LIMIT_ANGLE=7.00	
+FRICTION_LIMIT_ANGLE=8	
 XMU=0.27
-PRESSURE_STATIC=29. ; STATIC (COLD) PRESSURE
+PRESSURE_STATIC=29.0 ; STATIC (COLD) PRESSURE
 PRESSURE_SPRING_GAIN=7874 ; INCREASE IN N/m  per psi (from 26psi reference)
 PRESSURE_FLEX_GAIN=0.4 ; INCREASE IN FLEX per psi
 PRESSURE_RR_GAIN=0.55 ; INCREASE IN RR RESISTENCE per psi
@@ -51,9 +51,10 @@ DX_REF=1.27 ; trying to make the tire peakier like real life
 DY_REF=1.27 ; the real rt660 seems to handle more longitudinal forces than the default semislick
 FLEX_GAIN=0.0304
 ;FALLOFF_LEVEL=0.86
-FALLOFF_LEVEL=0.7 ; a lower value makes slip angle dropoff more severe
+;FALLOFF_LEVEL=0.7 ; a lower value makes slip angle dropoff more severe
+FALLOFF_LEVEL=0.65
 ;FALLOFF_SPEED=2
-FALLOFF_SPEED=3
+FALLOFF_SPEED=10
 CX_MULT=1.04
 RADIUS_ANGULAR_K=0.01   ; Radius grows of MILLIMITERS!! Formula -> RADIUS_ANGULAR_K * angularVelocity in rad/s
 BRAKE_DX_MOD=0.05
@@ -84,26 +85,27 @@ CAMBER_GAIN=0.136					; Camber gain value as slipangle multiplayer. default 1
 DCAMBER_0=1.2
 DCAMBER_1=-13						; D dependency on camber. D=D*(1.0 - (camberRAD*DCAMBER_0 + camberRAD^2 * DCAMBER_1)) , camberRAD=absolute value of camber in radians
 ;FRICTION_LIMIT_ANGLE=7.99							; Slip angle peak. 	
-FRICTION_LIMIT_ANGLE=7.00
+FRICTION_LIMIT_ANGLE=8
 XMU=0.27
 PRESSURE_STATIC=27 ; STATIC (COLD) PRESSURE
 PRESSURE_SPRING_GAIN=7874 ; INCREASE IN N/m  per psi (from 26psi reference)
 PRESSURE_FLEX_GAIN=0.4 ; INCREASE IN FLEX per psi
 PRESSURE_RR_GAIN=0.55 ; INCREASE IN RR RESISTENCE per psi
 PRESSURE_D_GAIN=0.0045	;loss of tyre footprint with pressure rise.
-PRESSURE_IDEAL=32			;Ideal pressure for grip
+PRESSURE_IDEAL=30			;Ideal pressure for grip
 FZ0=2494
 LS_EXPY=0.8119
 LS_EXPX=0.8791
 ;DX_REF=1.30
 ;DY_REF=1.28
-DX_REF=1.30
-DY_REF=1.30
+DX_REF=1.27
+DY_REF=1.27
 FLEX_GAIN=0.0304
 ;FALLOFF_LEVEL=0.86
-FALLOFF_LEVEL=0.7
+;FALLOFF_LEVEL=0.7
+FALLOFF_LEVEL=0.65
 ;FALLOFF_SPEED=2
-FALLOFF_SPEED=3
+FALLOFF_SPEED=10
 CX_MULT=1.04
 RADIUS_ANGULAR_K=0.01   ; Radius grows of MILLIMITERS!! Formula -> RADIUS_ANGULAR_K * angularVelocity in rad/s
 BRAKE_DX_MOD=0.05
